fix: white background to search button for contrast

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -98,7 +98,10 @@ header nav {
 .logo {
     border-radius: 5px;
     height: 5vh;
+}
 
+.white {
+    background: white;
 }
 
 /* Landing page */
